<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="alarm_volume_label_text">Alarm</string>
    <string name="app_name">tapset</string>
    <string name="volume_settings_label">Volume</string>
    <string name="error_encoding_qr">Error encoding settings as QR code</string>
    <string name="include_alarm_label_text">Include alarm tone</string>
    <string name="include_notification_label_text">Include notification tone</string>
    <string name="include_output_label_text">Include in output</string>
    <string name="include_ringtone_label_text">Include ringer tone</string>
    <string name="media_volume_label_text">Media</string>
    <string name="no_uri_to_encode">No settings to encode as QR</string>
    <string name="qr_code_label_text">QR code</string>
    <string name="ringer_mode_label_text">Mode</string>
    <string name="ringer_mode_normal_label">Normal</string>
    <string name="ringer_mode_silent_label">Silent</string>
    <string name="ringer_mode_vibrate_label">Vibrate</string>
    <string name="ringer_volume_label_text">Ringer</string>
    <string name="ringtone_settings_label">Ringtone</string>
    <string name="scan_writable_tag_text">Scan a writable tag&#8230;</string>
    <string name="scan_qr_code_label_text">Scan QR</string>
    <string name="share_label_text">Share QR</string>
    <string name="title_activity_qr_code">QR code</string>
    <string name="title_activity_write_tag">WriteTagActivity</string>
    <string name="title_settingsitem_detail">SettingsItem Detail</string>
    <string name="write_tag">Write tag&#8230;</string>
    <string name="provider_authority_file">us.rader.tapset.provider.file</string>
    <string name="unrecognized_result_code">Unrecognized result code from other activity</string>
    <string name="settings_updated">Settings updated from %1$s</string>
    <string name="success_writing_tag">Successfully wrote %1$d bytes to the tag</string>
    <string name="read_only_tag">Tag is write-protected</string>
    <string name="tag_size_exceeded">Tag size exceeded</string>
    <string name="null_message">App reported success but message is null!</string>
    <string name="cancelled">Cancelled</string>
    <string name="incompatible_tag">Incompatible tag; please try another</string>
    <string name="empty_tag">Empty tag; please try another</string>
    <string name="error_writing_tag">Error writing tag</string>
    <string name="write_protect_failed">Failed to write-protect the tag</string>
    <string name="error_formatting_tag">Error formatting tag</string>
    <string name="error_processing_tag">Error processing tag</string>

</resources>