<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/include_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/include_output_label_text" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/Mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ringer_mode_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/ringer_mode_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/ringer_mode_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ringer_mode_normal_label" />

            <RadioButton
                android:id="@+id/ringer_mode_vibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ringer_mode_vibrate_label" />

            <RadioButton
                android:id="@+id/ringer_mode_silent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ringer_mode_silent_label" />
        </RadioGroup>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ringer_volume_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ringer_volume_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/ringer_volume_slider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:indeterminate="false"
            android:max="100"
            android:progress="50" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/media_volume_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media_volume_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/media_volume_slider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:indeterminate="false"
            android:max="100"
            android:progress="50" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/alarm_volume_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_volume_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/alarm_volume_slider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:indeterminate="false"
            android:max="100"
            android:progress="50" />
    </TableRow>

</TableLayout>