<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/root_padding"
    tools:context=".settingsitems.RingtoneSettings" >

    <CheckBox
        android:id="@+id/include_ring_tone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_ringtone_label_text" />

    <CheckBox
        android:id="@+id/include_alarm_tone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_alarm_label_text" />

    <CheckBox
        android:id="@+id/include_notification_tone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_notification_label_text" />

</LinearLayout>